Change frontend cases of "Adres" to "Ter hoogte van".

--- a/app/apps/context/templates/standaard/melding_detail_locaties.html
+++ b/app/apps/context/templates/standaard/melding_detail_locaties.html
@@ -22,7 +22,7 @@
                         <div class="display--flex--md">
                             <ul class="list-clean">
                                 <li>
-                                    <h3 class="h5">Adres</h3>
+                                    <h3 class="h5">Ter hoogte van</h3>
                                     <p>
                                         {% if hoogste_gewicht_locatie.straatnaam %}
                                             {{ hoogste_gewicht_locatie.straatnaam }}
@@ -84,7 +84,7 @@
                             <div class="locatie-container display--flex--md">
                                 <ul class="list-clean">
                                     <li>
-                                        <h3 class="h5">Adres</h3>
+                                        <h3 class="h5">Ter hoogte van</h3>
                                         <p class="h5">
                                             {% if locatie.straatnaam %}
                                                 {{ locatie.straatnaam }}
