--- a/app/frontend/assets/styles/components/_details-summary.scss
+++ b/app/frontend/assets/styles/components/_details-summary.scss
@@ -39,6 +39,7 @@ details {
     }
 
     &.details-form {
+        margin-top: $alert-padding-y;
         summary {
             padding-left: 25px;
             color: $green-tint01;
