--- a/app/apps/main/templates/melding/part_locatie_aanpassen.html
+++ b/app/apps/main/templates/melding/part_locatie_aanpassen.html
@@ -11,7 +11,7 @@
                     aria-label="Sluit"
                     data-action="detail#closeModal"></button>
             <h1>
-                <span>Locatie Aanpassen</span>
+                <span>Locatie aanpassen</span>
             </h1>
             <div class="alert alert--info">
                 <span>
@@ -51,7 +51,7 @@
                                 <ul>
                                     {% for taak in actieve_taken %}<li>{{ taak.titel }}</li>{% endfor %}
                                 </ul>
-                                Als de locatie wordt aangepaat wordt de locatie van deze
+                                Als de locatie wordt aangepast wordt de locatie van deze
                                 {% if aantal_actieve_taken == 1 %}
                                     taak
                                 {% else %}
