feat: taaktypes beheer

--- a/app/apps/context/templates/context/context_form.html
+++ b/app/apps/context/templates/context/context_form.html
@@ -50,6 +50,7 @@
                         {{ form.filters|render_rotterdam_formulier }}
                         {{ form.kolommen|render_rotterdam_formulier }}
                         {{ form.standaard_filters|render_rotterdam_formulier }}
+                        {{ form.taaktypes|render_rotterdam_formulier }}
                         {{ form.template|render_rotterdam_formulier }}
                     </fieldset>
                     <div class="form-row container__button">
