--- a/app/apps/main/templates/melding/melding_lijst.html
+++ b/app/apps/main/templates/melding/melding_lijst.html
@@ -7,12 +7,11 @@
 {% block body %}
     <turbo-frame id="overview">
     <div data-controller="overview">
-        <form method="post"
+        <form method="get"
               action="{% url 'melding_lijst' %}"
               id="filterForm"
               data-controller="filter"
               data-turbo-action="advance">
-            {% csrf_token %}
             <div class="filter-header">
                 <div class="container__flex">
                     <h1 class="page-title">Meldingen</h1>
