--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -476,6 +476,10 @@ section {
     margin-bottom: 0 !important;
 }
 
+.padding--bottom {
+    padding-bottom: 1em;
+}
+
 .display--flex {
     display: flex;
 }
