--- a/app/frontend/assets/styles/components/_tables.scss
+++ b/app/frontend/assets/styles/components/_tables.scss
@@ -55,7 +55,7 @@
         background-position: 50% 50%;
         height: 48px;
         width: 64px;
-        margin-bottom: 4px;
+        margin: 0 $input-padding-y 4px 0;
 
         .thumbnail {
             height: 48px;
