--- a/app/apps/context/templates/standaard/melding_detail_locaties.html
+++ b/app/apps/context/templates/standaard/melding_detail_locaties.html
@@ -63,7 +63,7 @@
                         {% if hoogste_gewicht_locatie.geometrie.coordinates %}
                             <label for="egd_id">
                                 <input id="egd_id" type="checkbox" data-detail-map-layer-type-param="EGD" data-action="detail#onMapLayerChange">
-                                EGD
+                                Toon EGD-laag op kaart
                             </label>
                             <div class="container__map full-width">
                                 <div class="map"
