--- a/app/frontend/assets/styles/components/_incident-details.scss
+++ b/app/frontend/assets/styles/components/_incident-details.scss
@@ -154,3 +154,73 @@
         margin: 0 $container-padding-x 0 0;
     }
 }
+
+.container__uitklapper {
+    position: relative;
+    z-index: 2000;
+    display: inline;
+    vertical-align: middle;
+
+    > span {
+        margin-left: $input-padding-y;
+        svg {
+            path {
+                fill: $green-tint01;
+            }
+        }
+    }
+
+    .legenda {
+        position: absolute;
+        top: 20px;
+        left: -45px;
+        background-color: $white;
+        width: auto;
+        white-space: nowrap;
+        padding: $input-padding-x;
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+        display: none;
+
+        ul {
+            margin: 0;
+        }
+
+        li:not(:last-child) {
+            margin-bottom: $input-padding-y;
+        }
+    }
+
+    .legenda-item {
+        display: inline-block;
+        width: 24px;
+        height: 24px;
+        background-color: #d36000;
+        margin-right: $input-padding-y;
+        vertical-align: bottom;
+
+        &.openbaar {
+            background-color: #00ad00;
+        }
+        &.ret {
+            background-color: #ffff64;
+        }
+        &.kunst {
+            background-color: #d700b0;
+        }
+        &.begraafplaats {
+            background-color: #ffaeff;
+        }
+        &.aquisitie {
+            background-color: #3c3cff;
+        }
+        &.vastgoed {
+            background-color: #d36000;
+        }
+    }
+
+    &:hover {
+        .legenda {
+            display: block;
+        }
+    }
+}
