--- a/app/frontend/assets/styles/components/_imageSlider.scss
+++ b/app/frontend/assets/styles/components/_imageSlider.scss
@@ -74,6 +74,7 @@
             button {
                 border: 0;
                 cursor: pointer;
+                padding: 0;
             }
         }
     }
