--- a/app/frontend/assets/styles/components/_imageSlider.scss
+++ b/app/frontend/assets/styles/components/_imageSlider.scss
@@ -46,18 +46,12 @@
     padding: 16px 0 0;
     white-space: nowrap;
     overflow-x: scroll;
-    height: 98px;
-    max-width: 0;
     position: relative;
 
     ul {
         list-style: none;
         padding: 0;
         margin: 0 -8px;
-        position: absolute;
-        top: 16px;
-        left: 0;
-        transition: left, 0.5s;
 
         li {
             display: inline-block;
@@ -76,6 +70,18 @@
                 cursor: pointer;
                 padding: 0;
             }
+        }
+    }
+
+    .section--imageslider & {
+        height: 98px;
+        max-width: 0;
+
+        ul {
+            position: absolute;
+            top: 16px;
+            left: 2px;
+            transition: left, 0.5s;
         }
     }
 
