--- a/app/frontend/assets/styles/components/_alert.scss
+++ b/app/frontend/assets/styles/components/_alert.scss
@@ -25,6 +25,9 @@
         background-color: rgba(237, 181, 0, 0.1);
         border-color: rgba(237, 181, 0, 0.25);
 
+        svg {
+            margin-left: -4px;
+        }
         a {
             color: inherit;
         }
