--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -13,7 +13,11 @@
     {% context_template "melding_detail_acties.html" as acties_template %}
     <turbo-frame id="overview">
     <div data-controller="detail"
-         data-detail-incident-object-value="{{ melding|json_encode }}"
+        data-detail-incident-object-value="{{ melding|json_encode }}"
+        data-detail-mercure-public-url-value="{{ APP_MERCURE_PUBLIC_URL }}"
+        data-detail-gebruiker-value="{{ GEBRUIKER|json_encode }}"
+        data-detail-mercure-subscriptions-value="{{ mercure_subscriptions|json_encode }}"
+        data-detail-mercure-subscriber-token-value="{{ MERCURE_SUBSCRIBER_TOKEN }}"
          {% with highest_weight_locatie=melding.locaties_voor_melding|dictsort:"gewicht"|last %}
          {% if highest_weight_locatie %} data-detail-incident-y-value="{{ highest_weight_locatie.geometrie.coordinates.0 }}" data-detail-incident-x-value="{{ highest_weight_locatie.geometrie.coordinates.1 }}" {% endif %}
          {% endwith %}>
@@ -270,6 +274,10 @@
                                 </turbo-frame>
                             </section>
                         {% endif %}
+                        <section class="section--seperated" data-testid="detailGebruikerActiviteit">
+                            <ul data-detail-target="gebruikersActiviteit">
+                            </ul>
+                        </section>
                         <section class="section--seperated" data-testid="detailTijdlijn">
                             {% include "melding/part_tijdlijn.html" %}
                         </section>
