mercure melding publisher: show only if other user are using melding

--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -267,17 +267,22 @@
                         <div class="border-green print-only"></div>
                     </div>
                     <div class="grid-item aside">
+
                         {% include acties_template %}
+                        <section class="section--seperated" data-testid="" data-detail-target="gebruikersActiviteit">
+                            <h2>
+                                {% include "icons/person.svg" %}
+                                Melding gebruikers
+                            </h2>
+                            <ul>
+                            </ul>
+                        </section>
                         {% if melding.status.naam != "afgehandeld" and melding.status.naam != "geannuleerd" %}
                             <section class="section--seperated">
                                 <turbo-frame id="informatie_toevoegen" src="{% url 'informatie_toevoegen' melding.uuid %}">
                                 </turbo-frame>
                             </section>
                         {% endif %}
-                        <section class="section--seperated" data-testid="detailGebruikerActiviteit">
-                            <ul data-detail-target="gebruikersActiviteit">
-                            </ul>
-                        </section>
                         <section class="section--seperated" data-testid="detailTijdlijn">
                             {% include "melding/part_tijdlijn.html" %}
                         </section>
