--- a/app/apps/authorisatie/templates/auth/group_list.html
+++ b/app/apps/authorisatie/templates/auth/group_list.html
@@ -60,12 +60,16 @@
                         </td>
                         <td data-row-search-target="searchable">{{ object.user_set.all|length }}</td>
                         <td>
-                            <a href="{% url 'rechtengroep_aanpassen' object.pk %}">Aanpassen</a>
+                            <a href="{% url 'rechtengroep_aanpassen' object.pk %}" aria-label="Aanpassen">
+                                {% include "icons/edit.svg" %}
+                            </a>
                         </td>
                         <td>
                             {% if not object.user_set.all %}
                                 <a href="{% url 'rechtengroep_aanpassen' object.pk %}"
-                                   onclick="return confirm('Weet je zeker dat je deze rechtengroep wil verwijderen?')">Verwijderen</a>
+                                    onclick="return confirm('Weet je zeker dat je deze rechtengroep wil verwijderen?')" aria-label="Verwijderen">
+                                    {% include "icons/bin.svg" %}
+                                </a>
                             {% endif %}
                         </td>
                     </tr>
