--- a/app/apps/main/templates/standaard_externe_omschrijving/standaard_externe_omschrijving_lijst.html
+++ b/app/apps/main/templates/standaard_externe_omschrijving/standaard_externe_omschrijving_lijst.html
@@ -60,11 +60,15 @@
                         <td data-row-search-target="searchable">{{ object.titel }}</td>
                         <td data-row-search-target="searchable">{{ object.tekst|truncate_text:200 }}</td>
                         <td>
-                            <a href="{% url 'standaard_externe_omschrijving_aanpassen' object.pk %}">Aanpassen</a>
+                            <a href="{% url 'standaard_externe_omschrijving_aanpassen' object.pk %}" aria-label="Aanpassen">
+                                {% include "icons/edit.svg" %}
+                            </a>
                         </td>
                         <td>
                             <a href="{% url 'standaard_externe_omschrijving_verwijderen' object.pk %}"
-                               onclick="return confirm('Weet je zeker dat je deze standaard tekst wil verwijderen?')">Verwijderen</a>
+                               onclick="return confirm('Weet je zeker dat je deze standaard tekst wil verwijderen?')" aria-label="Verwijderen">
+                                {% include "icons/bin.svg" %}
+                            </a>
                         </td>
                     </tr>
                 {% endfor %}
