Added link to bulk import

--- a/app/frontend/assets/styles/components/_buttons.scss
+++ b/app/frontend/assets/styles/components/_buttons.scss
@@ -132,6 +132,12 @@ textarea {
         border-color: $gray-tint08;
         color: $gray-tint11;
 
+        svg {
+            path {
+                fill: currentColor;
+            }
+        }
+
         &:hover,
         &:focus {
             color: $primary;
