--- a/app/frontend/assets/styles/components/_page-beheer.scss
+++ b/app/frontend/assets/styles/components/_page-beheer.scss
@@ -4,9 +4,12 @@
     }
 
     .container__flex {
+        @media (min-width: map-get($grid-breakpoints, md)) {
+            display: flex;
+            justify-content: space-between;
+        }
         margin: 32px 0;
-        display: flex;
-        justify-content: space-between;
+
         > * {
             flex: 1;
         }
@@ -21,6 +24,11 @@
             &.btn-240 {
                 max-width: 240px;
             }
+        }
+
+        &.flex--end {
+            justify-content: flex-end;
+            gap: 1rem;
         }
     }
 
