--- a/app/apps/authenticatie/templates/authenticatie/gebruiker_bulk_import.html
+++ b/app/apps/authenticatie/templates/authenticatie/gebruiker_bulk_import.html
@@ -30,11 +30,11 @@
                     <div>
                         <h2 class="h3">Validatie resultaat</h2>
                     </div>
-                    <table>
+                    <table class="overview--validate haai">
                         <thead>
                             <tr>
                                 <th>E-mailadres</th>
-                                <th>Wordt geimporteerd</th>
+                                <th>Wordt geïmporteerd</th>
                                 <th></th>
                             </tr>
                         </thead>
@@ -44,7 +44,7 @@
                                 <td>{{ emailadres.emailadres }}</td>
                                 <td>{% if emailadres.is_emailadres and emailadres.bestaat_niet %}{% include "icons/checkmark.svg" %}{% else %}{% include "icons/close.svg" %}{% endif %}</td>
                                 <td>
-                                    <ul>
+                                    <ul class="list-clean">
                                         {% if not emailadres.is_emailadres %}<li><mark>{{ emailadres.emailadres }}</mark> is geen e-mailadres</li>{% endif %}
                                         {% if not emailadres.bestaat_niet %}<li>Een gebruiker met dit e-mailadres bestaat reeds</li>{% endif %}
                                     </ul>
@@ -58,7 +58,7 @@
                     <div class="form-row container__button">
                         <div class="form-row btn-row">
                             <button type="submit" name="aanmaken" value="ja" class="btn btn-action">
-                                <span>Gebruikers aanmaken</span>
+                                <span style="white-space: nowrap;">Gebruikers aanmaken</span>
                             </button>
                         </div>
                     </div>
