--- a/app/frontend/assets/styles/components/_tables.scss
+++ b/app/frontend/assets/styles/components/_tables.scss
@@ -107,3 +107,18 @@
         }
     }
 }
+
+.overview--validate {
+    .checkmark {
+        width: 20px;
+        height: 20px;
+        path {
+            fill: $green-tint01;
+        }
+    }
+    .close {
+        path {
+            fill: $red;
+        }
+    }
+}
