reset buttons navigates to listview

--- a/app/apps/authenticatie/templates/authenticatie/gebruiker_aanpassen.html
+++ b/app/apps/authenticatie/templates/authenticatie/gebruiker_aanpassen.html
@@ -36,10 +36,13 @@
                     </fieldset>
                     <div class="form-row container__button">
                         <div class="form-row btn-row">
-                            <button type="reset"
-                                    class="btn btn-tertiary"
-                                    data-controller="detail"
-                                    data-action="detail#closeModal">
+                            <button
+                                type="reset"
+                                class="btn btn-tertiary"
+                                data-controller="utils"
+                                data-action="utils#goToUrl"
+                                data-utils-url-param="{% url 'gebruiker_lijst' %}"
+                            >
                                 <span>Annuleren</span>
                             </button>
                             <button type="submit" class="btn btn-action">
