--- a/app/apps/context/templates/context/context_form.html
+++ b/app/apps/context/templates/context/context_form.html
@@ -55,7 +55,13 @@
                     </fieldset>
                     <div class="form-row container__button">
                         <div class="form-row btn-row">
-                            <button type="reset" class="btn btn-tertiary">
+                            <button
+                                type="reset"
+                                class="btn btn-tertiary"
+                                data-controller="utils"
+                                data-action="utils#goToUrl"
+                                data-utils-url-param="{% url 'context_lijst' %}"
+                            >
                                 <span>Annuleren</span>
                             </button>
                             <button type="submit" class="btn btn-action">
