--- a/app/apps/main/templates/standaard_externe_omschrijving/standaard_externe_omschrijving_aanpassen.html
+++ b/app/apps/main/templates/standaard_externe_omschrijving/standaard_externe_omschrijving_aanpassen.html
@@ -34,7 +34,13 @@
                     </fieldset>
                     <div class="form-row container__button">
                         <div class="form-row btn-row">
-                            <button type="reset" class="btn btn-tertiary">
+                            <button
+                                type="reset"
+                                class="btn btn-tertiary"
+                                data-controller="utils"
+                                data-action="utils#goToUrl"
+                                data-utils-url-param="{% url 'standaard_externe_omschrijving_lijst' %}"
+                            >
                                 <span>Annuleren</span>
                             </button>
                             <button type="submit" class="btn btn-action">
