--- a/app/apps/rotterdam_formulier_html/templates/rotterdam_formulier_html/field.html
+++ b/app/apps/rotterdam_formulier_html/templates/rotterdam_formulier_html/field.html
@@ -106,6 +106,7 @@
                         {% if field.field.required %}required{% endif %}>
                     {% for choice in field %}{{ choice.tag }}{% endfor %}
                 </select>
+                <p class="help-block invalid-text" style="margin:0;"></p>
                 {% for error in field.errors %}
                     <span class="help-block invalid-text {{ form.error_css_class }}">{{ error }}</span>
                 {% endfor %}
