--- a/app/frontend/assets/styles/components/_imageSlider.scss
+++ b/app/frontend/assets/styles/components/_imageSlider.scss
@@ -1,5 +1,5 @@
 .container__imageslider {
-    overflow-x: scroll;
+    overflow-x: auto;
     scroll-snap-type: x mandatory;
     scroll-behavior: smooth;
     width: 100%;
