--- a/app/apps/context/templates/standaard/melding_detail_acties.html
+++ b/app/apps/context/templates/standaard/melding_detail_acties.html
@@ -27,16 +27,14 @@
             <button type="button" class="btn btn-icon btn-textlink" data-action="detail#openModal" data-detail-action-param="{% url 'melding_annuleren' melding.uuid %}">
                 <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M13.7021 14.7627C12.425 15.8035 10.7902 16.425 9 16.425C4.875 16.425 1.575 13.125 1.575 9C1.575 7.20983 2.19652 5.57503 3.23727 4.29792L13.7021 14.7627ZM14.7627 13.7021L4.29793 3.23726C5.57504 2.19652 7.20983 1.575 9 1.575C13.125 1.575 16.425 4.875 16.425 9C16.425 10.7902 15.8035 12.425 14.7627 13.7021ZM0 9C0 13.95 4.05 18 9 18C13.95 18 18 13.95 18 9C18 4.05 13.95 0 9 0C4.05 0 0 4.05 0 9Z" fill="#00811F"/>
-                </svg>
-                Melding annuleren
+                </svg>Melding annuleren
             </button>
         </li>
         <li>
             <button type="button" class="btn btn-icon btn-textlink" data-action="detail#openModal" data-detail-action-param="{% url 'locatie_aanpassen' melding.uuid %}">
                 <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M11.637 0.5L0.5 11.6369V15.8795L4.74263 15.8796L15.8796 4.74264L11.637 0.5ZM13.7583 4.74264L11.637 2.62132L10.046 4.21231L12.1673 6.33363L13.7583 4.74264ZM4.74264 13.7582L11.1066 7.39428L8.98527 5.27296L2.62132 11.6369L4.74264 13.7582Z" fill="#00811F"/>
-                </svg>
-                Locatie aanpassen
+                </svg>Locatie aanpassen
             </button>
         </li>
         {% endif %}
