--- a/app/frontend/assets/styles/components/_buttons.scss
+++ b/app/frontend/assets/styles/components/_buttons.scss
@@ -60,7 +60,7 @@ $buttons: (
         "disabled-color": $gray-tint07,
     ),
     "text": (
-        "text-decoration": underline,
+        "text-decoration": $link-decoration,
         "background": $white,
         "border": $white,
         "color": $primary,
@@ -228,7 +228,7 @@ textarea {
         outline: none;
         padding: 0;
         margin: 0;
-        text-decoration: underline;
+        text-decoration: $link-decoration;
         max-width: none;
         min-height: 0;
         line-height: inherit;
