--- a/app/frontend/assets/styles/components/_incident-details.scss
+++ b/app/frontend/assets/styles/components/_incident-details.scss
@@ -18,7 +18,7 @@
             margin-right: 4px;
 
             &-textlink {
-                text-decoration: underline;
+                text-decoration: $link-decoration;
             }
         }
 
