--- a/app/frontend/assets/styles/components/_list-mutations.scss
+++ b/app/frontend/assets/styles/components/_list-mutations.scss
@@ -117,14 +117,25 @@
             }
         }
 
-        .warning {
-            &::before {
-                content: url("../icons/warning_triangle_open.svg");
-                position: absolute;
-                top: 0;
-                margin-left: -35px;
-                path {
-                    fill: $red;
+        &.warning {
+            > summary {
+                > strong {
+                    &::before {
+                        content: url("../icons/warning_triangle_open.svg");
+                        position: absolute;
+                        top: 0;
+                        margin-left: -35px;
+                        path {
+                            fill: $red;
+                        }
+                    }
+                }
+            }
+
+            .content {
+                .wrapper {
+                    background-color: rgba(237, 181, 0, 0.1);
+                    border: 1px solid rgba(237, 181, 0, 0.25);
                 }
             }
         }
