--- a/app/frontend/assets/styles/components/_spinner.scss
+++ b/app/frontend/assets/styles/components/_spinner.scss
@@ -7,32 +7,47 @@ turbo-frame {
     position: relative;
     display: block;
     width: 100%;
-    &[busy] {
+    &::before {
+        content: "";
+        z-index: 2000;
+        background-color: rgba(255, 255, 255, 0.5);
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 100%;
+        bottom: 100%;
+        opacity: 0;
+        pointer-events: none;
+    }
+    &::after {
+        content: "";
+        border: 8px solid $primary;
+        border-top: 8px solid rgba(0, 129, 31, 0.5);
+        border-radius: 50%;
+        width: 60px;
+        height: 60px;
+        animation: spin 2s linear infinite;
+        left: calc(50% - 30px);
+        top: calc(50% - 30px);
+        display: block;
+        position: fixed;
+        z-index: 2001;
+        box-sizing: border-box;
+        // pointer-events: none;
+        opacity: 0;
+    }
+    &:not([data-spinner="hide"])[busy] {
         &::before {
-            content: "";
-            z-index: 2000;
-            background-color: rgba(255, 255, 255, 0.5);
-            position: fixed;
-            top: 0;
-            left: 0;
             right: 0;
             bottom: 0;
-            pointer-events: none;
+            opacity: 1;
+            transition: opacity 0.5s;
+            transition-delay: 1s;
         }
         &::after {
-            content: "";
-            border: 8px solid $primary;
-            border-top: 8px solid rgba(0, 129, 31, 0.5);
-            border-radius: 50%;
-            width: 60px;
-            height: 60px;
-            animation: spin 2s linear infinite;
-            left: calc(50% - 30px);
-            top: calc(50% - 30px);
-            display: block;
-            position: fixed;
-            z-index: 2001;
-            box-sizing: border-box;
+            opacity: 1;
+            transition: opacity 0.5s;
+            transition-delay: 1s;
         }
     }
 
