--- a/app/frontend/assets/styles/components/_map.scss
+++ b/app/frontend/assets/styles/components/_map.scss
@@ -17,6 +17,7 @@
     .map {
         height: 0;
         padding-bottom: 50%;
+        border: 1px solid $gray-tint04;
 
         .map__overlay {
             color: $white;
